--- a/java/com/videlov/cyclist/BUILD
+++ b/java/com/videlov/cyclist/BUILD
@@ -3,4 +3,7 @@ java_binary(
     srcs = ["Main.java"],
     main_class = "com.videlov.cyclist.Main",
     visibility = ["//visibility:public"],
+    deps = [
+        "//java/com/videlov/cyclist/decompiler",
+    ],
 )
